Update dates, sort_by date

--- a/templates/post-series.html
+++ b/templates/post-series.html
@@ -1,8 +1,7 @@
 {% extends "serene/templates/post.html" %}
 <!-- 
-  This template is intended for use in a blog subsection where pages in the subsection are sorted 
-  by weight. It works the same as a regular post, except it has arrows pointing to the previous and 
-  next page, by weight, in the subsection where appropriate.
+  This template is intended for use in a blog subsection where pages in the subsection are sorted.
+  Adds arrows pointing to the previous and next page, in the subsection where appropriate.
  -->
 
 
